kingston-update-notifier (1.2.2) UNRELEASED; urgency=low

  * src/CMakeLists.txt: Ensure minimal linking.
  * debian/source/options: Added with compression BZip2.

 -- Kai Wasserbäch <curan@debian.org>  Mon, 14 Feb 2011 10:42:55 +0100

kingston-update-notifier (1.2.1) unstable; urgency=low

  [ Pino Toscano ]
  * Fix an untranslatable message.

  [ Kai Wasserbäch ]
  * Regenerate POT.
  * Updated German translation.
  * Actually build the translations in the po directory.
  * debian/control: Tighten B-D on CMake (for translation; I've only tested
    the GETTEXT_CREATE_TRANSLATIONS macro as present of version 2.6.3+).
  * debian/control: Added myself to uploaders (on Sune's invitation, thanks!)
    and moved the maintainership to KDE Extras.

 -- Kai Wasserbäch <curan@debian.org>  Sun, 13 Feb 2011 21:18:18 +0100

kingston-update-notifier (1.2+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Added reboot option, thanks to George Stephanos. (Closes: #604684)
  * Added POT file.
  * debian/control:
    - Bumped Standards-Version to 3.9.1, no further changes needed.
    - Added Recommends on anacron. (Closes: #597168)
    - Added Vcs-{Git,Browser} fields.
  * Added my German translation. (Closes: #606008)

 -- Kai Wasserbäch <curan@debian.org>  Wed, 26 Jan 2011 14:28:34 +0100

kingston-update-notifier (1.2) unstable; urgency=low

  * Fix segfault. Closes: #589491

 -- Sune Vuorela <sune@debian.org>  Mon, 19 Jul 2010 20:48:13 +0200

kingston-update-notifier (1.1) unstable; urgency=low

  * Improve messages, mostly by Pino Toscano.
    Includes proper plural messages.
    (Closes: #585783)
  * Fix handling of notifications to not keep adding more, and to kill old
    ones (Closes: #584315)
  * Add a README telling about update notifier kde. Thanks to Michael
    Schuerig.

 -- Sune Vuorela <sune@debian.org>  Fri, 16 Jul 2010 23:45:30 +0200

kingston-update-notifier (1.0) unstable; urgency=low

  * Initial Release.
